--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PeerPrep | Ace your tech interviews today</title>
   </head>
-  <body>
+  <body style="background-color: #171923;">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
