--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link href="src/styles/style.css" rel="stylesheet">
+    <title>PeerPrep</title>
   </head>
-  <body>
+  <body class="min-h-screen grid place-content-start">
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
