--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,7 +26,7 @@
     -->
     <!-- Download Poppins font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
-    <title>React App</title>
+    <title>PeerPrep</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
